set agent-instrumenter jdk to 1.8